tree-sitter/tree-sitter-agda/corpus/declaration/field.txt
==================
Field
==================

field
    a : A
    a : A

---

(source_file
    (fields
        (signature (field_name)
            (expr (atom (qid))))
        (signature (field_name)
            (expr (atom (qid))))))

==================
Field (same line)
==================

field a : A

---

(source_file
    (fields
        (signature (field_name)
            (expr (atom (qid))))))

==================
Field (same line + block)
==================

field a : A
      b : B

---

(source_file
    (fields
        (signature (field_name)
            (expr (atom (qid))))
        (signature (field_name)
            (expr (atom (qid))))))
