tree-sitter/tree-sitter-agda/corpus/declaration/instance.txt
==================
Instance
==================

instance
  f : A g
  f = f g

---

(source_file
  (instance
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
    (function
      (lhs
        (atom (qid)))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
  )
)
