tree-sitter/tree-sitter-agda/corpus/declaration/macro.txt
==================
Macro
==================

macro
  f : A g

---

(source_file
  (macro
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
  )
)
