tree-sitter/tree-sitter-agda/corpus/declaration/mutual.txt
==================
Mutual
==================

mutual
  f : A g
  f = f g

  g : B f
  g = f g


---

(source_file
  (mutual
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
    (function
      (lhs
        (atom (qid)))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
    (function
      (lhs (function_name (atom (qid))))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
    (function
      (lhs
        (atom (qid)))
      (rhs
        (expr (atom (qid)) (atom (qid)))))
  )
)
